--- a/app/views/pgp_strategies/edit.html.haml
+++ b/app/views/pgp_strategies/edit.html.haml
@@ -1,3 +1,4 @@
 %h1 Editing PGP Strategy
 = simple_form_for @pgp_strategy, :url => pgp_strategy_path(@pgp_strategy.id) do |f|
-    = render partial: 'form', :locals => {f:f}
+    %table
+        = render partial: 'form', :locals => {f:f}
