--- a/app/views/pgp_goals/index.html.haml
+++ b/app/views/pgp_goals/index.html.haml
@@ -34,6 +34,10 @@
               %td
                 = link_to edit_pgp_goal_path(pgp_goal), :class => "btn btn-info action-small" do
                   %span.small-btn-text Edit
+
+              %td
+                = link_to pgp_goal_pgp_scores_path(pgp_goal), :class => "btn btn-info action-small" do
+                  %span.small-btn-text Score
               %td
                 = button_to("/pgp_goals/#{pgp_goal.id}", {:class => "btn btn-info btn-danger action-small", method: :delete, data: {confirm: "Are you sure you want to completly remove this goal? You can also deactivate the goal if you don't want to remove it completly."}}) do
                   %span.small-btn-text Delete
