add entry point in student actions menu
also fix problem where wrong goal was being fetched when trying to score

--- a/app/views/application/_dropdown.html.erb
+++ b/app/views/application/_dropdown.html.erb
@@ -1,6 +1,12 @@
-<!--Partial receives list called actions containing hashes with a :menu_name that indicates the name to appear in the dropdown,
+<!--
+In the students index view, each student has a drop down that, when clicked, displays possible actions on that student along with the number of resources available. For example, a student might have some praxis_results logged, and that number is displayed as an icon in this menu
+
+
+Partial receives list called actions containing hashes with a :menu_name that indicates the name to appear in the dropdown,
        and a :link_url that provides the path linked to. 
-       If a link should be disabled, pass in an additional key called :disable. The :menu_name will still show in the dropdown menu.-->
+       If a link should be disabled, pass in an additional key called :disable. The :menu_name will still show in the dropdown menu.
+
+-->
 
 <div class="dropdown">
   <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Actions
