--- a/app/views/pgp_strategies/index.html.haml
+++ b/app/views/pgp_strategies/index.html.haml
@@ -1,3 +1,6 @@
+= link_to student_pgp_goals_path(@pgp_goal.student.id), class: "btn btn-default back-link glyphicon glyphicon-arrow-left" do
+  %i.link-text Back
+
 .container-fluid
   %table.listing.table.table-striped
     %row
