--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -52,6 +52,7 @@
                     <span class="caret"></span>
                   </button>
                   <ul class="dropdown-menu">
+                    <!-- see assets/javascripts/students.js -->
                     <!-- available actions populated here -->
                   </ul>
                 </div>
