--- a/app/views/pgp_scores/index.html.haml
+++ b/app/views/pgp_scores/index.html.haml
@@ -1,8 +1,9 @@
-= link_to student_pgp_goals_path(@pgp_goal), class: "btn btn-default back-link glyphicon glyphicon-arrow-left" do
+= link_to pgp_goal_pgp_scores_path(@pgp_goal), class: "btn btn-default back-link glyphicon glyphicon-arrow-left" do
   %i.link-text Back
 
 %h1= "PGP scores for #{@pgp_goal.name}"
 %h2= @pgp_goal.student.name_readable
+%h3= "#{pluralize( @score_groups.size, 'date' )} found"
 %div
   = link_to new_pgp_goal_pgp_score_path(@pgp_goal), :class => "btn btn-info glyphicon glyphicon-plus action-large" do
     %span.large-btn-text Score goal
